package models;

public class Player {

    private String name;

    public void setName(String name){
        this.name = name;
    }
}
